syntax = "proto3";

import "google/protobuf/empty.proto";

package api;

option go_package = "github.com/dynamic-calm/mokv/internal/api";

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    bytes value = 2;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {
    bool ok = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool ok = 1;
}

message Server {
    string id = 1;
    string rpc_addr = 2;
    bool is_leader = 3;
}

message GetServersResponse{
    repeated Server servers = 1;
}

service KV {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc List(google.protobuf.Empty) returns (stream GetResponse) {}
    rpc GetServers(google.protobuf.Empty) returns (GetServersResponse){}
}
